tests/snapshots/examples_fixtures/basics__list_basic.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/list_basic.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E031]: EXPECTED EXPRESSION

Expected expression, found ||.

  --> examples/basics/list_basic.flx:71:21
   |
71 | let my_new_list2 = [||]
   |                     ^^
== stdout ==
<not executed>
